logger is now header only & static functions & add stream logging + add prefs header + start work on commands module

--- a/RemotePlayerPi.cbp
+++ b/RemotePlayerPi.cbp
@@ -48,8 +48,8 @@
 		<Unit filename="include/mCommand.h" />
 		<Unit filename="include/mData.h" />
 		<Unit filename="include/mNet.h" />
+		<Unit filename="include/prefs.h" />
 		<Unit filename="main.cpp" />
-		<Unit filename="src/Logger.cpp" />
 		<Unit filename="src/RemotePlayer.cpp" />
 		<Unit filename="src/mAudio.cpp" />
 		<Unit filename="src/mCommand.cpp" />
