update gitignore following repo new organisation

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
-RemotePlayerPi.layout
-RemotePlayerPi.depend
-RemotePlayerPi.sdf
-RemotePlayerPi.opensdf
-RemotePlayerPi.vcxproj.user
-RemotePlayerPi.v11.suo
-RemotePlayerPi.v12.suo
-Debug/
-obj/
-.vs/
+Server/RemotePlayerPi.layout
+Server/RemotePlayerPi.depend
+Server/RemotePlayerPi.sdf
+Server/RemotePlayerPi.opensdf
+Server/RemotePlayerPi.vcxproj.user
+Server/RemotePlayerPi.v11.suo
+Server/RemotePlayerPi.v12.suo
+Server/Debug/
+Server/obj/
+Server/.vs/
