--- a/Server/RemotePlayerPi.vcxproj
+++ b/Server/RemotePlayerPi.vcxproj
@@ -69,6 +69,7 @@
   <ItemGroup>
     <ClCompile Include="main.cpp" />
     <ClCompile Include="src\Logger.cpp" />
+	<ClCompile Include="src\mBase.cpp" />
     <ClCompile Include="src\mAudio.cpp" />
     <ClCompile Include="src\mCommand.cpp" />
     <ClCompile Include="src\mData.cpp" />
@@ -78,6 +79,7 @@
   <ItemGroup>
     <ClInclude Include="include\Logger.h" />
     <ClInclude Include="include\mAudio.h" />
+	<ClInclude Include="include\mBase.h" />
     <ClInclude Include="include\mCommand.h" />
     <ClInclude Include="include\mData.h" />
     <ClInclude Include="include\mNet.h" />
