--- a/App/RemotePlayerPiApp.csproj
+++ b/App/RemotePlayerPiApp.csproj
@@ -60,6 +60,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AuthActivity.cs" />
     <Compile Include="MainActivity.cs" />
     <Compile Include="Network.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
@@ -69,9 +70,12 @@
     <None Include="GettingStarted.Xamarin" />
     <None Include="Resources\AboutResources.txt" />
     <None Include="Assets\AboutAssets.txt" />
+    <AndroidResource Include="Resources\layout\Main.axml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\layout\Main.axml">
+    <AndroidResource Include="Resources\layout\Auth.axml">
       <SubType>Designer</SubType>
     </AndroidResource>
   </ItemGroup>
