--- a/App/RemotePlayerPiApp.csproj
+++ b/App/RemotePlayerPiApp.csproj
@@ -63,6 +63,7 @@
     <Compile Include="AuthActivity.cs" />
     <Compile Include="MainActivity.cs" />
     <Compile Include="Network.cs" />
+    <Compile Include="Prefs.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
